[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "System URI API library"
documentation = "https://docs.rs/system_uri"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "system_uri"
readme = "README.md"
repository = "https://github.com/maidsafe/system_uri"
version = "0.4.0"
edition = "2021"

[dependencies]
quick-error = "~1.2"
ffi_utils = { version = "~0.17", optional = true }
libc  = { version = "~0.2", optional = true }

[dev-dependencies]
rand = "~0.8"
unwrap = "~1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
winapi = "0.3.9"

[target.'cfg(target_os = "linux")'.dependencies]
xdg-basedir = "~1.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "~0.2"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
name = "system_uri"

[features]
default = ["ffi"]
ffi = ["libc", "ffi_utils"]
